<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog_confirmation"
    android:radius="16dp"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_email_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_email_message"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/verification_email_negative_button"
            android:textAllCaps="true"
            android:backgroundTint="@color/white"
            android:textColor="@color/red"
            android:strokeColor="@color/blue"
            app:strokeWidth="2dp"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/verification_email_positive_button"
            android:textAllCaps="true"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:strokeColor="@color/blue"
            android:layout_marginStart="16dp"
            app:strokeWidth="2dp"/>
    </LinearLayout>
</LinearLayout>
