<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    android:background="?attr/background"
    tools:context=".ui.setting.SettingsFragment">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/deleteUserButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete_account"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/ic_deleted"
        app:iconGravity="end"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintTop_toBottomOf="@+id/contactButton"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/background_transparent"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:tint="?attr/android:textColor"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="20sp"
            android:text="@string/setting"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/informationButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/information"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/ic_info"
        app:iconPadding="30dp"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout"
        tools:layout_editor_absoluteX="24dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/contactButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/contact_us"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/ic_contact"
        app:iconPadding="30dp"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/informationButton"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/logoutButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/red"
        android:elevation="8dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_logout"
        app:iconGravity="textEnd"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.915" />


</androidx.constraintlayout.widget.ConstraintLayout>